# FinalProject

./: .gitignore  Dockerfile  backtest_run.py  candidates.txt  docker-compose.yml  pyproject.toml  requirements.txt  train.py
api/: main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
notebooks/: prototype.ipynb
signal_engine/: __init__.py  cli.py  paths.py  runner.py  utils.py
src/evaluation/: final_suite.py  main.py
src/features/: compute_features.py
src/ingestion/: clean_data.py  fetch_data.py
src/models/: backtest_utils.py  base_model.py  calibrate.py  config.py  db.py  grid_tree_search.py  parameter_grids.py  target.py  train_models.py  train_rulefit.py  xgb_surrogate.py
src/models/engines/: decision_tree.py  gp.py  rulefit.py  xgb_surrogate.py
src/utils/: metrics.py  windows.py
tests/: test_core_logic.py  test_features.py  test_labels.py  test_portfolio_cash.py  test_target.py
